k8s/apps/cantinho/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cantinho
  namespace: cantinho
  labels:
    app: cantinho
    platform.oficina/tenant: personal
    platform.oficina/app: cantinho
    platform.oficina/owner: igorsoaresalves
spec:
  rules:
    - host: cantinho.goriok.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cantinho
                port:
                  number: 80
